--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,10 @@
     <head>
         <title>Javascript Test</title>
     </head>
-
     <body>
-        <button id="connectButton" onclick="bundle.connect()">Connect</button>
-        <button id="executeButton" onclick="bundle.execute()">Execute</button>
-    </body>
+        <script>
 
-    <script src="./dist/bundle.js" type="text/javascript"></script>
+        </script>
+        <button id="connectButton" onclick="connect()">Connect</button>
+    </body>
 </html>
